# mysql-student-cli

./: README.md  code_guide.md  data.py  database.py  ddl.sql  pyproject.toml  registrar.py  relation_course_prerequisites.md  test_code.py  test_print.py  test_prompt.py  trigger.sql
mysql_highlight/: __init__.py  printer.py
